# dagshell

./: .gitignore  CLAUDE.md  README.md  README_TERMINAL.md  TEST_COVERAGE_REPORT.md  command_parser.py  dagshell.py  dagshell_fluent.py  demo.py  demo_fluent.py  demo_persistence.py  demo_posix_features.py  demo_terminal.py  mkdocs.yml  pyproject.toml  scheme_interpreter.py  terminal.py  test_dagshell.py  test_dagshell_extended.py  test_fluent.py  test_integration.py  test_scheme_extended.py  test_scheme_interpreter.py  test_terminal.py  test_terminal_demo.py  test_terminal_interactive.py  test_user_permissions.py
.github/workflows/: docs.yml
dagshell/: __init__.py  command_parser.py  dagshell.py  dagshell_fluent.py  enhanced_terminal.py  scheme_interpreter.py  terminal.py
docs/: TERMINAL_USAGE.md  index.md
docs/api/: dagshell.md  filesystem.md
docs/architecture/: content-addressing.md  overview.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: commands.md  python-api.md  terminal.md
docs/posts/: 01-immutable-content-addressed-filesystem.md  02-unix-philosophy-python.md  03-embedding-scheme-interpreter.md
examples/: __init__.py  demo.py  demo_fluent.py  demo_persistence.py  demo_posix_features.py  demo_terminal.py
paper/: Makefile  README.md  dagshell.tex
tests/: __init__.py  test_command_parser_coverage.py  test_core_filesystem_comprehensive.py  test_dagshell.py  test_dagshell_extended.py  test_edge_cases_comprehensive.py  test_enhanced_terminal.py  test_fluent.py  test_help_system.py  test_import_export_comprehensive.py  test_import_from_real.py  test_integration.py  test_persistence_comprehensive.py  test_regression_fixes.py  test_scheme_conditionals.py  test_scheme_extended.py  test_scheme_integration_comprehensive.py  test_scheme_interpreter.py  test_terminal.py  test_terminal_advanced.py  test_terminal_coverage.py  test_terminal_demo.py  test_terminal_features.py  test_terminal_features_comprehensive.py  test_terminal_interactive.py  test_text_processing_comprehensive.py  test_user_permissions.py
